Fix bug decimals